--- a/views/wallets.ejs
+++ b/views/wallets.ejs
@@ -57,7 +57,7 @@
  <div class="py-5 text-center">
    <h2>Checkout</h2>
  </div>
-
+<form class="" action="/afterCheckOut" method="post">
  <div class="row g-5">
    <div class="col-md-5 col-lg-4 order-md-last">
      <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -81,7 +81,8 @@
         <div>
           <h6 class="my-0">Total Price</h6>
         </div>
-        <span name = "TotalPrice"class="text-muted">$<%= TotalPrice %></span>
+        <span name = ""class="text-muted">$<%= TotalPrice %></span>
+        <input type="hidden" name="TotalPrice" value="<%= TotalPrice %>">
         </li>
         <li class="list-group-item d-flex justify-content-between lh-sm">
         <div>
@@ -92,20 +93,20 @@
         <% if (TotalPoints == "0"){ %>
         <% } else{ %>
           <li class="list-group-item d-flex justify-content-between lh-sm">
-            <input type="checkbox" name="checkbox" value="">Use Points</input>
+            <input type="checkbox" name="Pointscheckbox" checked="true" value="true">Use Points</input>
             <br>
             <% if (DiscountedPrice < "0"){ %>
               <label name = "DiscountedPrice" > Discounted Price: $0</label><br>
               <% } else{ %>
-            <label name = "DiscountedPrice" > Discounted Price: $<%= DiscountedPrice %></label><br>
+            <label name = "" > Discounted Price: $<%= DiscountedPrice %></label><br>
+            <input type="hidden" name="DiscountedPrice" value="<%= DiscountedPrice %>">
             <%  }%>
             </li>
         <%  }%>
 
    </div>
-   <div class="col-md-7 col-lg-8">
+<div class="col-md-7 col-lg-8">
      <h4 class="mb-3">Billing address</h4>
-     <form class="" action="/afterCheckOut" method="post">
        <div class="row g-3">
          <div class="col-sm-6">
            <label for="firstName" class="form-label">First name</label>
