--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,23 +2,148 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles5.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
     <title>Profile</title>
   </head>
-  <body>
-    <h4>First Name: <%= FName %> </h4>
+  <body body class="bg-light">
+    <div class="container">
+      <main>
+
+        <div class="py-5 text-center">
+          <!-- <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57"> -->
+          <h1 style="text-align:center;"class="company">PASTIME</h4>
+          <h4 style="text-align:center;"class="h3 mb-3 fw-normal"> Edit My Account</h1>
+        </div>
+        <div class="row g-5">
+          <div class="col-md-6 col-lg-12">
+              <div class="row g-3">
+                <div class="col-sm-6 col-lg-12 col-md-12">
+              <form class="" action="/afterUser" method="post">
+                  <label>First Name</label>
+                <input  required="required" name="EditedFName"class="form-control"  value="<%= FName %>">
+                  <div class="invalid-feedback">
+                    Valid first name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">Last Name</label>
+                <input required="required" name="EditedLName" class="form-control"  value="<%= LName %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">EmailID</label>
+                <input required="required" readonly name="EditedEMD" class="form-control"  value="<%= EID1 %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">Street</label>
+                <input required="required" name="EditedFAdress" class="form-control"  value="<%= FAddress %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">City</label>
+                <input required="required" name="EditedCity" class="form-control"  value="<%= FCity %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">State</label>
+                <input required="required" name="EditedFState" class="form-control"  value="<%= FState %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">Zipcode</label>
+                <input required="required" name="EditedFZIP" class="form-control"  value="<%= fZIP %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">Credit Card Number</label>
+                <input required="required" name="EditedCreditNum" class="form-control"  value="<%= CreditNum %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">CVC</label>
+                <input required="required" name="EditedCVC" class="form-control"  value="<%= cvc %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                  <label for="">Points</label>
+                <input required="required" readonly name="EditedDescription" class="form-control"  value="<%= Fpoints %>">
+                  <div class="invalid-feedback">
+                    Valid last name is required.
+                  </div>
+                </div>
+
+                <div style="padding-top: 2.15rem;"class="btn1 col-6">
+                 <button type="submit" name="vote" value="Done" class="btn btn-primary">Done</button>
+                </div>
+            </form>
+          </div>
+
+        </div>
+        <a style="width:5rem; height:2.5rem;"class="btn btn-dark" href="dashboard"> Back</a>
+
+        <div class="row g-5">
+          <div class="col-md-6 col-lg-12">
+              <div class="row g-3">
+            <form class="" action="/changePass" method="post">
+                  <h1>Change Password</h1>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                <input style="width:35%"name="oldPassword" placeholder="Old Password">
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                <input style="width:35%" name="newPassword1" type="text"  placeholder="New Password">
+                </div>
+                <div class="col-sm-6 col-lg-12 col-md-12">
+                <input style="width:35%" type="text" name="newPassword2" placeholder="Confirm New Password">
+                </div>
+                <div style="padding-top: 2.15rem;"class="btn1 col-6">
+                <button type="submit" class="btn btn-primary" >Done</button>
+                </div>
+                </form>
+                </div>
+                </div>
+                </div>
+
+
+      </main>
+
+
+
+    <!-- <h4>First Name: <%= FName %> </h4>
     <h4>Last Name: <%= LName %> </h4>
     <h4>Email Address: <%= EID1 %> </h4>
-    <h4>Address: <%= FAddress %> </h4>
+    <h4>Address: <%= FAddress %> </h4> -->
 
-    <form class="" action="/changePass" method="post">
 
-      <h1>Change Password</h1>
-    <input name="oldPassword" placeholder="Old Password">
-    <input name="newPassword1" type="text"  placeholder="New Password">
-    <input type="text" name="newPassword2" placeholder="New Password">
-    <button type="submit">Done</button>
-    </form>
-
+    <footer class="my-5 pt-5 text-muted text-center text-small">
+      <p class="mt-5 mb-3 text-muted maru">© 2021</p>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+      </ul>
+    </footer>
+  </div>
 
 
 
